Moved from http-server to express

--- a/templates/guestBookTemplate.html
+++ b/templates/guestBookTemplate.html
@@ -11,7 +11,7 @@
 
     <header>
       <h1>
-        <a href="flower-catalog.html">
+        <a href="index.html">
           << </a>
             Guest Book
       </h1>
