Added routers for login and guestbook Created signup page

--- a/templates/guestBookTemplate.html
+++ b/templates/guestBookTemplate.html
@@ -3,7 +3,7 @@
 <head>
   <title>Guest Book</title>
   <link rel="stylesheet" href="css/guest-book.css">
-  <script src="postComment.js"></script>
+  <script src="js/postComment.js"></script>
 </head>
 
 <body>
